:sparkle: php-fpm and caddy

--- a/laravel-app/deploy/kube/deployment.yaml
+++ b/laravel-app/deploy/kube/deployment.yaml
@@ -13,11 +13,13 @@ spec:
         app: twik-home
     spec:
       containers:
-        # Our PHP-FPM application
-        - image: alonronin/php-fpm:php-${hash}
-          name: php-fpm
-
-        # Our nginx container, which uses the configuration declared above,
-        # along with the files shared with the PHP-FPM app.
-        - image: alonronin/php-fpm:nginx-${hash}
-          name: nginx
+          - name: caddy
+            image: alonronin/php-fpm:caddy-${hash}
+#        # Our PHP-FPM application
+#        - image: alonronin/php-fpm:php-${hash}
+#          name: php-fpm
+#
+#        # Our nginx container, which uses the configuration declared above,
+#        # along with the files shared with the PHP-FPM app.
+#        - image: alonronin/php-fpm:nginx-${hash}
+#          name: nginx
